--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: blog
 title: Blog
 description: >
-  The official Hydejack blog. Version updates, example content and how-to guides on how to blog with Jekyll.
+  This is the official website for sham code YouTube channel. Subscribe for more...
 last_modified_at: 2018-08-03
-no_link_title: false 
-no_excerpt: false 
+no_link_title: false
+no_excerpt: false
 hide_image: false
 cover: true
 ---
